<?xml version="1.0" encoding="utf-8"?>


<resources>
    <!-- App name -->
    <string name="app_name">Tunaiku </string>

    <!-- Hint text for editable text field where the user enters the cost of service -->
    <string name="cost_of_service">Ingin Meminjam Berapa</string>

    <!-- Question prompt for the group of radio buttons with different tip options -->
    <string name="how_was_the_service">Diangsur berapa bulan? (Bunga 3,75% per bulan)</string>

    <!-- Tip option for amazing service which uses 20% to calculate the tip  -->
    <string name="amazing_service">6 Bulan </string>

    <!-- Tip option for good service which uses 18% to calculate the tip  -->
    <string name="good_service">12 Bulan </string>

    <!-- Tip option for okay service which uses 16% to calculate the tip  -->
    <string name="ok_service">18 Bulan </string>

    <!-- Label for button that calculates the tip  -->
    <string name="calculate">Kalkulasikan</string>

    <!-- Total Biaya -->
    <string name="total_amount">Total Biaya yang harus dibayar: %s</string>

    <!-- Biaya Layanan -->
    <string name="biaya_amount">Biaya Layanan : %s</string>
</resources>